// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should open an external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-1q7sbxr-0 kAtXNw pointer-events-none no-underline inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="https://ark.io/"
  >
    <span
      class="group"
    >
      <span
        class="no-underline break-all pointer-events-auto border-b group-hover:border-0 active:border-0 border-dotted"
      />
      <div
        class="sc-bdfBwQ fPrsah flex-shrink-0 pointer-events-auto"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-1q7sbxr-0 kAtXNw pointer-events-none no-underline inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="/test"
  >
    <span
      class="group"
    >
      <span
        class="no-underline break-all pointer-events-auto hover:border-b"
      >
        Test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-1q7sbxr-0 kAtXNw pointer-events-none no-underline inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="https://ark.io"
  >
    <span
      class="group"
    >
      <span
        class="no-underline break-all pointer-events-auto border-b group-hover:border-0 active:border-0 border-dotted"
      />
      <div
        class="sc-bdfBwQ fPrsah flex-shrink-0 pointer-events-auto"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-1q7sbxr-0 kAtXNw pointer-events-none no-underline inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="/test"
  >
    <span
      class="group"
    >
      <span
        class="no-underline break-all pointer-events-auto hover:border-b"
      >
        Test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-1q7sbxr-0 kAtXNw pointer-events-none no-underline inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="invalid-url"
  >
    <span
      class="group"
    >
      <span
        class="no-underline break-all pointer-events-auto border-b group-hover:border-0 active:border-0 border-dotted"
      />
      <div
        class="sc-bdfBwQ fPrsah flex-shrink-0 pointer-events-auto"
        data-testid="Link__external"
        height="1em"
        width="1em"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;
